--- a/index.html
+++ b/index.html
@@ -165,13 +165,15 @@
 <section class="imageBackground">
     <div id="contentContainerForm">
         <div class="itemContainer" >
-            <div class="itemLeft">
-                <div id="formTextContainer">
-                    <p id="formText">Tell us your vision, and we'll bring it to life! 
-                        Fill out the form on the side and get a reply from our friendly staff within 24 hours to setup an onsite visit and free quotation…</p>
-                </div>
+            <div class="itemLeftContainer">
                     <div id="itemLeftContainer">
-                        <p id="formTextWhite">42 Singleton Hill, <br>Ashford, <br>Kent, <br>TN23 5WE</p>
+                        <h1>Our Office</h1>
+                        <p id="formTextWhite">Contemporay Coatings, <br>42 Singleton Hill, <br>Ashford, <br>Kent, <br>TN23 5WE, <br>07724 748515</p>
+                    </div>
+                    <div class="itemRightInfo">
+                        <p>Tell us your vision, and we'll bring it to life! 
+                            Fill out the form and our friendly staff will aim to respond within 24 hours to setup an onsite visit and free quotation.
+                            <br>Please forward all email enquiries to brushes@contemporary-coatings.co.uk</p>
                     </div>
                     <div id="itemRightContainer">
                             <div id="map"></div>
@@ -183,14 +185,24 @@
                     <label for="name"></label>
                     <input type="text" required id="name" placeholder="First Name" name="name">
 
-                    <label for="lname"></label>
-                    <input type="text" required id="lname" placeholder="Last Name" name="lname">
-
                     <label for="address"></label>
-                    <input type="text" required id="address" placeholder="Address" name="address">
+                    <input type="text" required id="address" placeholder="Last Name" name="address">
 
                     <label for="email"></label>
-                    <input type="email" required id="email" placeholder="Your Email" name="email">
+                    <input type="email" required id="email" placeholder="Phone Number" name="email">
+
+                    <label for="email"></label>
+                    <input type="email" required id="email" placeholder="Email" name="email">
+
+                    <label for="email"></label>
+                    <input type="email" required id="email" placeholder="Post Code" name="email">
+
+                    <label id="sideService" for="Service">Select a Service</label>
+                    <select required id="service" name="Service">
+                        <option value="Painting_Services">Painting Services</option>
+                        <option value="Wallpapering">Wallpapering</option>
+                        <option value="Other_Services">Other Services</option>
+                    </select>
     
                     <label for="message"></label>
                     <textarea name="message" id="message" cols="60" rows="8" placeholder="Enter your message"></textarea>
