--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         <div id="fullScreen">
             <img src="assets/images/Banner_DarkBlue_01.jpg" alt="" id="hero-image">
         </div>
-        <section id="About">
+
+    <section id="About">
 
     <div id="contentContainer">
 
@@ -33,7 +34,7 @@
                 <p>We have been in the industry for more than 35 years combined and have developed a strong reputation built on recommendation.</p>
                 <p>We receive the majority of our work through repeat business with existing clients and personal recommendation.</p>
                 <div>
-                    <a id="OurWorkBtn">See Some of Our Work</a>
+                    <a href="#OurGallery" id="OurWorkBtn">See Some of Our Work</a>
                 </div>
             </section>
                 <div class="itemRight">
@@ -223,11 +224,9 @@
 
 <footer id="contentContainerFooter">
     <div class="itemContainerFooter">
-        <div class="itemLeftFoot">
-            <img src="assets/images/Contemporary-Coatings_Logo_NavyText_3D-1024x626.png" alt="Contemporary Coating's Logo" id="footerLogo">
-        </div>
         <div class="itemRightFoot">
-            <p>brushes@contemporary-coatings.co.uk</p>
+            <img src="assets/images/Contemporary-Coatings_Logo_WhiteText_3D-300x183.png" alt="Contemporary Coating's Logo" id="footerLogo">
+            <p id="paddedTop">brushes@contemporary-coatings.co.uk</p>
             <p>Don <a>07724 748515</a></p>
             <p>Meg <a>07547 865157</a></p>
         </div>
