Responsive Design. Part One Finished. Last Half of Page To Complete

--- a/index.html
+++ b/index.html
@@ -39,55 +39,70 @@
             <section class="itemLeft">
                 <h3 id="Who_Are_We">Who Are We?</h3>
                 <h3 id="About_Heading">Contemporary Coatings specialise in providing professional painting & decorating services in Kent...</h3>
-                <p>We have been in the industry for more than 35 years combined and have developed a strong reputation built on recommendation.</p>
-                <p>We receive the majority of our work through repeat business with existing clients and personal recommendation.</p>
-                <div>
+                <p class="desktopScreenActive">We have been in the industry for more than 35 years combined and have developed a strong reputation built on recommendation.
+                We receive the majority of our work through repeat business with existing clients and personal recommendation.</p>
+                <div class="desktopScreenActive">
                     <a href="#OurGallery" id="OurWorkBtn">See Some of Our Work</a>
                 </div>
             </section>
-                <div class="itemRight">
+                <div class="itemRight mobileScreenActive">
                     <img class="imgAboutUsRight" src="/assets/images/Interior.jpg" alt="Logo">
                 </div>
+        </div>
+        <p class="laptopScreenActive">We have been in the industry for more than 35 years combined and have developed a strong reputation built on recommendation. We receive the majority of our work through repeat business with existing clients and personal recommendation.</p>
+        <div class="laptopScreenActive">
+            <a href="#OurGallery" id="OurWorkBtn">See Some of Our Work</a>
         </div>
     </div>
 </section>
 
-<section id="Services">
-    <div id="contentContainer">
-        <div id="itemContainerServices">
-            <div id="images">
-                <img id="image" src="/assets/images/Interior_01.jpg" alt="">
-                <h3>Interior Painting</h3>
-                <p>Whether it's giving the kitchen wall a new colour or sprucing up your bedroom, Contemporary Coatings know what's right and will offer you the best possible solution and work with your specifications.</p>
+
+        <section id="Services">
+            <div id="servicesContainer">
+                <div id="images">
+                    <img id="image" src="/assets/images/Interior_01.jpg" alt="">
+                    <h3 id="imageText">Interior Painting</h3>
+                    <p id="imageText">Whether it's giving the kitchen wall a new colour or sprucing up your bedroom, Contemporary Coatings know what's right and will offer you the best possible solution and work with your specifications.</p>
+                </div>
+                <div id="images">
+                    <img id="image" src="/assets/images/ExteriorPainting_01.jpg" alt="">
+                    <h3 id="imageText">Exterior Painting</h3>
+                    <p id="imageText">Does your brickwork need tidying up with a splash of paint, or your wood paneling needs bringing into this century with some beautiful restoration paintwork? We’re on hand to bring your vision to life.</p>
+                </div>
+                <div id="images">
+                    <img id="image" src="/assets/images/Spraying_02.jpg" alt="">
+                    <h3 id="imageText">Spraying</h3>
+                    <p id="imageText">Contemporary Coatings are domestic and commercial spray paint specialists. Offering professional spray painting to ceilings, walls, bedroom and household furniture and custom joinery.</p>
+                </div>
+                <div id="images">
+                    <img id="image" src="/assets/images/Wallpapering_01.jpg" alt="">
+                    <h3 id="imageText">Wallpapering</h3>
+                    <p id="imageText">Are you Wanting to cover your living room or a feature wall in your bedroom or lounge? Don't worry, We have you covered! Contemporary Coatings provide high quality wallpapering work.</p>
+                </div>
             </div>
-            <div id="images">
-                <img id="image" src="/assets/images/ExteriorPainting_01.jpg" alt="">
-                <h3>Exterior Painting</h3>
-                <p>Does your brickwork need tidying up with a splash of paint, or your wood paneling needs bringing into this century with some beautiful restoration paintwork? We’re on hand to bring your vision to life.</p>
-            </div>
-            <div id="images">
-                <img id="image" src="/assets/images/Spraying_02.jpg" alt="">
-                <h3>Spraying</h3>
-                <p>Contemporary Coatings are domestic and commercial spray paint specialists. Offering professional spray painting to ceilings, walls, bedroom and household furniture and custom joinery.</p>
-            </div>
-            <div id="images">
-                <img id="image" src="/assets/images/Wallpapering_01.jpg" alt="">
-                <h3>Wallpapering</h3>
-                <p>Are you Wanting to cover your living room or a feature wall in your bedroom or lounge? Don't worry, We have you covered! Contemporary Coatings provide high quality wallpapering work.</p>
-            </div>
-        </div>
+        </section>
+
+
+
+
+
+
+    <div id="contentContainerServices">
     <div id="serviceContainer02">
         <h3 id="serviceHeader02">& So Much More...</h3>
         <p>Having any tradespeople working in your home can be a stressful experience, and at Contemporary Coatings we understand that good, honest and clear communication is vital for all of our customers, as it gives both reassurance and peace of mind. We pride ourselves on being reliable, trustworthy and completing work to the deadlines agreed. Please contact us you won’t be disappointed!</p>
     </div>
     <div class="itemContainerServices">
         <ul class="extraList">
-            <li><i class="fa-solid fa-check" id="tick"></i> Refurbishment</li>
-            <li><i class="fa-solid fa-check" id="tick"></i> Extensions</li>
-            <li><i class="fa-solid fa-check" id="tick"></i> New Builds</li>
-            <li><i class="fa-solid fa-check" id="tick"></i> Paint Spraying</li>
-            <li><i class="fa-solid fa-check" id="tick"></i> Kitchen Facelifts</li>
-            <li><i class="fa-solid fa-check" id="tick"></i> Bedroom Facelifts</li>
+            <li><i class="fa-solid fa-check" id="tick"></i>Refurbishment</li>
+            <li><i class="fa-solid fa-check" id="tick"></i>Extensions</li>
+            <br class="phoneScreenActive">
+            <li><i class="fa-solid fa-check" id="tick"></i>New Builds</li>
+            <li><i class="fa-solid fa-check" id="tick"></i>Paint Spraying</li>
+            <br class="smallTabletScreenActive">
+            <li><i class="fa-solid fa-check" id="tick"></i>Kitchen</li>
+            <br class="tabletScreenActive">
+            <li><i class="fa-solid fa-check" id="tick"></i>Bedroom</li>
         </ul>
     </div>
 </div>
@@ -108,6 +123,10 @@
         <p id="review">Kate Horrell</p>
         <p id="review">Emma Simmons</p>
     </div>
+</div>
+
+
+
 </div>
 </div>
 </section>
