Review Section Made Responsive.

--- a/index.html
+++ b/index.html
@@ -106,22 +106,36 @@
         </ul>
     </div>
 </div>
-</section>
+
+
 <section class="blueBackground">
 <div id="contentContainer02">
     <div id="serviceContainer02">
         <h3 id="serviceHeader03">What Our Customers Say...</h3>
     </div>
     <div id="reviewContainer">
-        <p id="star"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></p>
-        <p id="star"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></p>
-        <p id="star"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></p>
-        <p id="review">We have had the pleasure of using Contemporary Coatings on a number of projects within both the retail and private sector. Megan and her team provide a professional, high level end service, completing projects within demanding timescales.</p>
-        <p id="review">Working with Meg & Don has been an absolute pleasure & I would highly recommend them to everyone. They carried out all the redecoration in our five bedroom Georgian property which has included things that go beyond the usual wall colours & wallpapering.</p>
-        <p id="review">They have done an amazing job doing with all the decorating in my home. Not only did they do a professional job with the decorating, they also did a fantastic job of cleaning up to make sure it looked like they were never there. Would recommend to everyone.</p>
-        <p id="review">Jon Beeching</p>
-        <p id="review">Kate Horrell</p>
-        <p id="review">Emma Simmons</p>
+        <p id="star" class="mobileActive"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></p>
+        <p id="star" class="mobileActive"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></p>
+        <p id="star" class="mobileActive"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></p>
+        <p id="review" class="mobileActive">We have had the pleasure of using Contemporary Coatings on a number of projects within both the retail and private sector. Megan and her team provide a professional, high level end service, completing projects within demanding timescales.</p>
+        <p id="review" class="mobileActive">Working with Meg & Don has been an absolute pleasure & I would highly recommend them to everyone. They carried out all the redecoration in our five bedroom Georgian property which has included things that go beyond the usual wall colours & wallpapering.</p>
+        <p id="review" class="mobileActive">They have done an amazing job doing with all the decorating in my home. Not only did they do a professional job with the decorating, they also did a fantastic job of cleaning up to make sure it looked like they were never there. Would recommend to everyone.</p>
+        <p id="review" class="mobileActive">Jon Beeching</p>
+        <p id="review" class="mobileActive">Kate Horrell</p>
+        <p id="review" class="mobileActive">Emma Simmons</p>
+
+        <p id="star" class="desktopActive"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></p>
+        <p id="review" class="desktopActive">We have had the pleasure of using Contemporary Coatings on a number of projects within both the retail and private sector. Megan and her team provide a professional, high level end service, completing projects within demanding timescales.</p>
+        <p id="review" class="desktopActive">Jon Beeching</p>
+        <br>
+        <p id="star" class="desktopActive"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></p>
+        <p id="review" class="desktopActive">Working with Meg & Don has been an absolute pleasure & I would highly recommend them to everyone. They carried out all the redecoration in our five bedroom Georgian property which has included things that go beyond the usual wall colours & wallpapering.</p>
+        <p id="review" class="desktopActive">Kate Horrell</p>
+        <br>
+        <p id="star" class="desktopActive"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></p>
+        <p id="review" class="desktopActive">They have done an amazing job doing with all the decorating in my home. Not only did they do a professional job with the decorating, they also did a fantastic job of cleaning up to make sure it looked like they were never there. Would recommend to everyone.</p>
+        <p id="review" class="desktopActive">Emma Simmons</p>
+
     </div>
 </div>
 
