Gallery Made Responsive.

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 </div>
 </section>
 <section id="OurGallery">
-<div id="contentContainer">
+<div id="contentContainer03">
 <div id="myBtnContainer">
     <button class="btn active" onclick="filterSelection('all')"> Show all</button>
     <button class="btn" onclick="filterSelection('ExteriorPainting')"> Exterior Painting</button>
