Footer Made Responsive.

--- a/index.html
+++ b/index.html
@@ -260,16 +260,13 @@
 </section>
 </section>
 
-<footer id="contentContainerFooter">
-    <div class="itemContainerFooter">
-        <div class="itemRightFoot">
-            <img src="assets/images/Contemporary-Coatings_Logo_WhiteText_3D-300x183.png" alt="Contemporary Coating's Logo" id="footerLogo">
-            <p id="paddedTop">brushes@contemporary-coatings.co.uk</p>
-            <p>Don <a>07724 748515</a></p>
-            <p>Meg <a>07547 865157</a></p>
-        </div>
-    </div>
+<footer>
+    <img src="assets/images/Contemporary-Coatings_Logo_WhiteText_3D-300x183.png" alt="Contemporary Coating's Logo">
+    <p>brushes@contemporary-coatings.co.uk</p>
+    <p>Don <a>07724 748515</a></p>
+    <p>Meg <a>07547 865157</a></p>
 </footer>
+
 <script src="assets/js/sendEmail.js"></script>
 <script src="assets/js/script.js"></script>
 <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD43BJr5aCgP3e4o3d1ipyTmzwdsL6QonI&callback=initMap&v=weekly"></script>
