All Reponsive Design Finished. Website Finished.

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                         <h1>Our Office</h1>
                         <p id="formTextWhite">Contemporay Coatings, <br>42 Singleton Hill, <br>Ashford, <br>Kent, <br>TN23 5WE, <br>07724 748515</p>
                     </div>
-                    <div class="itemRightInfo">
+                    <div class="itemRightInfo" id="mobileActive02">
                         <p>Tell us your vision, and we'll bring it to life! 
                             Fill out the form and our friendly staff will aim to respond within 24 hours to setup an onsite visit and free quotation.
                             <br>Please forward all email enquiries to brushes@contemporary-coatings.co.uk</p>
