Fixed Images NOT Showing

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </div>
             </section>
                 <div class="itemRight mobileScreenActive">
-                    <img class="imgAboutUsRight" src="/assets/images/Interior.jpg" alt="Logo">
+                    <img class="imgAboutUsRight" src="assets/images/Interior.jpg" alt="Logo">
                 </div>
         </div>
         <p class="laptopScreenActive">We have been in the industry for more than 35 years combined and have developed a strong reputation built on recommendation. We receive the majority of our work through repeat business with existing clients and personal recommendation.</p>
@@ -60,22 +60,22 @@
         <section id="Services">
             <div id="servicesContainer">
                 <div id="images">
-                    <img id="image" src="/assets/images/Interior_01.jpg" alt="">
+                    <img id="image" src="assets/images/Interior_01.jpg" alt="">
                     <h3 id="imageText">Interior Painting</h3>
                     <p id="imageText">Whether it's giving the kitchen wall a new colour or sprucing up your bedroom, Contemporary Coatings know what's right and will offer you the best possible solution and work with your specifications.</p>
                 </div>
                 <div id="images">
-                    <img id="image" src="/assets/images/ExteriorPainting_01.jpg" alt="">
+                    <img id="image" src="assets/images/ExteriorPainting_01.jpg" alt="">
                     <h3 id="imageText">Exterior Painting</h3>
                     <p id="imageText">Does your brickwork need tidying up with a splash of paint, or your wood paneling needs bringing into this century with some beautiful restoration paintwork? We’re on hand to bring your vision to life.</p>
                 </div>
                 <div id="images">
-                    <img id="image" src="/assets/images/Spraying_02.jpg" alt="">
+                    <img id="image" src="assets/images/Spraying_02.jpg" alt="">
                     <h3 id="imageText">Spraying</h3>
                     <p id="imageText">Contemporary Coatings are domestic and commercial spray paint specialists. Offering professional spray painting to ceilings, walls, bedroom and household furniture and custom joinery.</p>
                 </div>
                 <div id="images">
-                    <img id="image" src="/assets/images/Wallpapering_01.jpg" alt="">
+                    <img id="image" src="assets/images/Wallpapering_01.jpg" alt="">
                     <h3 id="imageText">Wallpapering</h3>
                     <p id="imageText">Are you Wanting to cover your living room or a feature wall in your bedroom or lounge? Don't worry, We have you covered! Contemporary Coatings provide high quality wallpapering work.</p>
                 </div>
@@ -158,50 +158,50 @@
   <div class="row">
     <div class="column ExteriorPainting">
       <div class="content">
-        <img src="/assets/images/ExteriorPainting_01.jpg" alt="ExteriorPainting" style="width:100%">
+        <img src="assets/images/ExteriorPainting_01.jpg" alt="ExteriorPainting" style="width:100%">
       </div>
     </div>
     <div class="column ExteriorPainting">
       <div class="content">
-      <img src="/assets/images/ExteriorPainting_02.jpg" alt="ExteriorPainting" style="width:100%">
+      <img src="assets/images/ExteriorPainting_02.jpg" alt="ExteriorPainting" style="width:100%">
       </div>
     </div>
     <div class="column ExteriorPainting">
       <div class="content">
-      <img src="/assets/images/ExteriorPainting_03.jpg" alt="ExteriorPainting" style="width:100%">
+      <img src="assets/images/ExteriorPainting_03.jpg" alt="ExteriorPainting" style="width:100%">
       </div>
     </div>
     
     <div class="column Interior">
       <div class="content">
-        <img src="/assets/images/Interior_01.jpg" alt="Interior" style="width:100%">
+        <img src="assets/images/Interior_01.jpg" alt="Interior" style="width:100%">
       </div>
     </div>
     <div class="column Interior">
       <div class="content">
-      <img src="/assets/images/Interior_02.jpg" alt="Interior" style="width:100%">
+      <img src="assets/images/Interior_02.jpg" alt="Interior" style="width:100%">
       </div>
     </div>
     <div class="column Interior">
       <div class="content">
-      <img src="/assets/images/Interior_03.jpg" alt="Interior" style="width:100%">
+      <img src="assets/images/Interior_03.jpg" alt="Interior" style="width:100%">
       </div>
     </div>
 
       <div class="column Spraying">
         <div class="content">
-        <img src="/assets/images/Spraying_02.jpg" alt="Spraying" style="width:100%">
+        <img src="assets/images/Spraying_02.jpg" alt="Spraying" style="width:100%">
         </div>
       </div>
 
       <div class="column Wallpapering">
         <div class="content">
-          <img src="/assets/images/Wallpapering_01.jpg" alt="Wallpapering" style="width:100%">
+          <img src="assets/images/Wallpapering_01.jpg" alt="Wallpapering" style="width:100%">
         </div>
       </div>
       <div class="column Wallpapering">
         <div class="content">
-        <img src="/assets/images/Wallpapering_03.jpg" alt="Wallpapering" style="width:100%">
+        <img src="assets/images/Wallpapering_03.jpg" alt="Wallpapering" style="width:100%">
         </div>
       </div>
 </div>
